fix sonarqube instanceOf and collector tolist