@@ -63,7 +63,7 @@ public class RssFeedRenderServlet extends SlingSafeMethodsServlet {
 
             String rootPath = req.getResource().getPath();
             List<String> paths = articleService.getLatestArticles(rootPath, isAll ? SUB_REQUEST_LIMITATION : MAX_PAGES)
-                    .stream().map(Article::getJcrPath).collect(Collectors.toList());
+                    .stream().map(Article::getJcrPath).toList();
             feed.printEntries(paths, isFullBody);
 
             feed.printFooter();
